--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,21 +13,14 @@ jobs:
     - name: Checkout Code
       uses: actions/checkout@v2
 
-    - name: Login to Azure
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-    - name: Build and Push Docker image
+    - name: Login to Azure Container Registry
       uses: azure/docker-login@v1
       with:
         login-server: hamprod.azurecr.io
         username: ${{ secrets.ACR_USERNAME }}
         password: ${{ secrets.ACR_PASSWORD }}
-      run: |
-        docker build -t hamprod.azurecr.io/cv-chatbot-api:latest .
-        docker push hamprod.azurecr.io/cv-chatbot-api:latest
 
-    - name: Deploy to Azure Container Instances
+    - name: Build and Push Docker image
       run: |
-        az container create --resource-group ham-prod --name cv-chatbot-api --image hamprod.azurecr.io/cv-chatbot-api:latest --dns-name-label cv-chatbot-api --ports 80
+        docker build -t hamprod.azurecr.io/cv-chatbot-api:${{ github.run_number }} .
+        docker push hamprod.azurecr.io/cv-chatbot-api:${{ github.run_number }}
